--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ h1, h2 {
 }
 
 .project-content p {
+  height: 63px;
   margin-bottom: 15px;
   color: #8892b0;
 }
@@ -119,6 +120,7 @@ footer {
 }
 
 footer p {
+  
   margin-bottom: 10px;
   font-size: 14px;
 }
